add_subdirectory(APITests/)
add_subdirectory(ASM/)
add_subdirectory(32Bit_ASM/)
add_subdirectory(IR/)
add_subdirectory(POSIX/)
add_subdirectory(gvisor-tests/)
add_subdirectory(gcc-target-tests-32/)
add_subdirectory(gcc-target-tests-64/)
if (BUILD_THUNKS)
  add_subdirectory(ThunkLibs)
endif()


if (BUILD_FEX_LINUX_TESTS)
  add_subdirectory(FEXLinuxTests/)
endif()